# SDL3-App

./: .gitmodules  CMakeLists.txt  README.md  compile.sh  complile.sh  configure.sh  imgui.ini  run.sh
data/res/: Basic.shader
src/: SDL3-App.cpp  main.cpp
src/game/: asset.h  game.cpp  game.h  indexBuffer.cpp  indexBuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.cpp  vertexBufferLayout.h
